--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>StudySlate</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/sticky.css">
     <link rel="stylesheet" href="./css/image.css">
     <link rel="stylesheet" href="./css/hamburger.css">
     <link rel="stylesheet" href="./css/queries.css">
-    <link rel="shortcut icon" href="./NewIcons/pep.png" type="image/x-icon">
 </head>
 
 <body>
@@ -92,5 +91,6 @@
     <script src="./js/zoomin.js"></script>
     <script src="./js/reciever.js"></script>
 </body>
+
 
 </html>
